--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,128 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
 	:root {
-		--text-50: 120 12% 95%;
-		--text-100: 111 14% 90%;
-		--text-200: 107 14% 80%;
-		--text-300: 111 12% 70%;
-		--text-400: 111 13% 60%;
-		--text-500: 111 13% 50%;
-		--text-600: 111 13% 40%;
-		--text-700: 111 12% 30%;
-		--text-800: 107 14% 20%;
-		--text-900: 111 14% 10%;
-		--text-950: 100 12% 5%;
-
-		--background-50: 120 20% 95%;
-		--background-100: 120 22% 90%;
-		--background-200: 120 20% 80%;
-		--background-300: 120 20% 70%;
-		--background-400: 120 20% 60%;
-		--background-500: 120 20% 50%;
-		--background-600: 120 20% 40%;
-		--background-700: 120 20% 30%;
-		--background-800: 120 20% 20%;
-		--background-900: 120 22% 10%;
-		--background-950: 120 20% 5%;
-
-		--primary-50: 120 12% 95%;
-		--primary-100: 111 14% 90%;
-		--primary-200: 111 14% 80%;
-		--primary-300: 111 12% 70%;
-		--primary-400: 111 13% 60%;
-		--primary-500: 111 13% 50%;
-		--primary-600: 111 13% 40%;
-		--primary-700: 111 12% 30%;
-		--primary-800: 111 14% 20%;
-		--primary-900: 111 14% 10%;
-		--primary-950: 100 12% 5%;
-
-		--secondary-50: 140 12% 95%;
-		--secondary-100: 146 14% 90%;
-		--secondary-200: 146 14% 80%;
-		--secondary-300: 145 12% 70%;
-		--secondary-400: 145 13% 60%;
-		--secondary-500: 145 13% 50%;
-		--secondary-600: 145 13% 40%;
-		--secondary-700: 145 12% 30%;
-		--secondary-800: 146 14% 20%;
-		--secondary-900: 146 14% 10%;
-		--secondary-950: 160 12% 5%;
-
-		--accent-50: 140 12% 95%;
-		--accent-100: 154 14% 90%;
-		--accent-200: 150 14% 80%;
-		--accent-300: 152 12% 70%;
-		--accent-400: 150 13% 60%;
-		--accent-500: 151 13% 50%;
-		--accent-600: 150 13% 40%;
-		--accent-700: 152 12% 30%;
-		--accent-800: 150 14% 20%;
-		--accent-900: 154 14% 10%;
-		--accent-950: 160 12% 5%;
+		--text: #151a14;
+		--background: #f9fbf9;
+		--primary: #41513e;
+		--secondary: #a3b8ac;
+		--accent: #597366;
 	}
 	.dark {
-		--text-50: 100 12% 5%;
-		--text-100: 111 14% 10%;
-		--text-200: 107 14% 20%;
-		--text-300: 111 12% 30%;
-		--text-400: 111 13% 40%;
-		--text-500: 111 13% 50%;
-		--text-600: 111 13% 60%;
-		--text-700: 111 12% 70%;
-		--text-800: 107 14% 80%;
-		--text-900: 111 14% 90%;
-		--text-950: 120 12% 95%;
-
-		--background-50: 120 20% 5%;
-		--background-100: 120 22% 10%;
-		--background-200: 120 20% 20%;
-		--background-300: 120 20% 30%;
-		--background-400: 120 20% 40%;
-		--background-500: 120 20% 50%;
-		--background-600: 120 20% 60%;
-		--background-700: 120 20% 70%;
-		--background-800: 120 20% 80%;
-		--background-900: 120 22% 90%;
-		--background-950: 120 20% 95%;
-
-		--primary-50: 100 12% 5%;
-		--primary-100: 111 14% 10%;
-		--primary-200: 111 14% 20%;
-		--primary-300: 111 12% 30%;
-		--primary-400: 111 13% 40%;
-		--primary-500: 111 13% 50%;
-		--primary-600: 111 13% 60%;
-		--primary-700: 111 12% 70%;
-		--primary-800: 111 14% 80%;
-		--primary-900: 111 14% 90%;
-		--primary-950: 120 12% 95%;
-
-		--secondary-50: 160 12% 5%;
-		--secondary-100: 146 14% 10%;
-		--secondary-200: 146 14% 20%;
-		--secondary-300: 145 12% 30%;
-		--secondary-400: 145 13% 40%;
-		--secondary-500: 145 13% 50%;
-		--secondary-600: 145 13% 60%;
-		--secondary-700: 145 12% 70%;
-		--secondary-800: 146 14% 80%;
-		--secondary-900: 146 14% 90%;
-		--secondary-950: 140 12% 95%;
-
-		--accent-50: 160 12% 5%;
-		--accent-100: 154 14% 10%;
-		--accent-200: 150 14% 20%;
-		--accent-300: 152 12% 30%;
-		--accent-400: 150 13% 40%;
-		--accent-500: 151 13% 50%;
-		--accent-600: 150 13% 60%;
-		--accent-700: 152 12% 70%;
-		--accent-800: 150 14% 80%;
-		--accent-900: 154 14% 90%;
-		--accent-950: 140 12% 95%;
+		--text: #e7ece6;
+		--background: #050705;
+		--primary: #b1c1ae;
+		--secondary: #475d50;
+		--accent: #8ba698;
+	}
+	* {
+		@apply border-white/10;
+	}
+	body {
+		@apply bg-background text-text;
 	}
 }
