--- a/client/src/index.css
+++ b/client/src/index.css
@@ -144,4 +144,15 @@
 	body {
 		@apply bg-background text-text;
 	}
+	.text-outline {
+		text-shadow:
+			-1px -1px 0 #475d50,
+			0 -1px 0 #475d50,
+			1px -1px 0 #475d50,
+			1px 0 0 #475d50,
+			1px 1px 0 #475d50,
+			0 1px 0 #475d50,
+			-1px 1px 0 #475d50,
+			-1px 0 0 #475d50;
+	}
 }
