--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../app.css";
 import "@fontsource-variable/inter";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
   title: string;
@@ -18,6 +19,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
   <body>
     <slot />
