--- a/frontend/src/pages/game/[room].astro
+++ b/frontend/src/pages/game/[room].astro
@@ -1,5 +1,5 @@
 ---
-import Game from "~/components/game/Game";
+import Game from "@game/Game";
 import Layout from "~/layouts/Layout.astro";
 
 const { room } = Astro.params;
