--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,15 @@
     @apply border-white/10;
   }
 }
+
+.text-outline {
+  text-shadow:
+    -1px -1px 0 #475d50,
+    0 -1px 0 #475d50,
+    1px -1px 0 #475d50,
+    1px 0 0 #475d50,
+    1px 1px 0 #475d50,
+    0 1px 0 #475d50,
+    -1px 1px 0 #475d50,
+    -1px 0 0 #475d50;
+}
